feat: enforce unique email per account

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,7 @@
     <div id="login-overlay">
         <div class="login-box">
             <h1>Raven Universe</h1>
+            <input type="email" id="email" placeholder="Communication Frequency (Email)" style="display:none;">
             <input type="text" id="username" placeholder="Pilot Callsign">
             <input type="password" id="password" placeholder="Access Code">
             <button id="btn-login">LOGIN</button>
